<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qcar2_behavior_tree</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hackbrian@todo.todo">hackbrian</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>std_srvs</depend>
  <depend>rcl_interfaces</depend>
  <depend>control_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>grid_map_msgs</depend>
  <depend>ros2launch</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>cartographer_ros</depend>
  <depend>nav2_common</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_amcl</depend>
  <depend>qcar2_interfaces</depend>
  <depend>qcar2_nodes</depend>
  <depend>qcar2_nodex</depend>
  <depend>qcar2_mixer</depend>
  <depend>qcar2_object_detections</depend>
  <depend>qcar2_laneseg_acc</depend>
  <exec_depend>ament_index_python</exec_depend>
  <depend>isaac_ros_yolov8</depend>
  <depend>isaac_ros_tensor_rt</depend>
  <depend>isaac_ros_dnn_image_encoder</depend>
  <depend>python3-opencv</depend>
  <depend>python3-numpy</depend>
  <depend>libopencv-dev</depend>
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
